--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -28,7 +28,7 @@ endpoints:
         name: name
         description: 'Must be at least 2 characters. Must not be greater than 100 characters.'
         required: true
-        example: gquskqzjfi
+        example: cpngdoicznmndjcwui
         type: string
         enumValues: []
         custom: []
@@ -36,7 +36,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address. Must not be greater than 100 characters.'
         required: true
-        example: alanis.wilkinson@example.org
+        example: mflatley@example.net
         type: string
         enumValues: []
         custom: []
@@ -44,14 +44,14 @@ endpoints:
         name: password
         description: 'Must be at least 6 characters.'
         required: true
-        example: 'Zl&W_/vN''Z\={'
+        example: ')Y3pZXOb@<=SbJaV6#'
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      name: gquskqzjfi
-      email: alanis.wilkinson@example.org
-      password: 'Zl&W_/vN''Z\={'
+      name: cpngdoicznmndjcwui
+      email: mflatley@example.net
+      password: ')Y3pZXOb@<=SbJaV6#'
     fileParameters: []
     responses: []
     responseFields: []
@@ -85,7 +85,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: davis.rae@example.com
+        example: linnea90@example.com
         type: string
         enumValues: []
         custom: []
@@ -93,13 +93,13 @@ endpoints:
         name: password
         description: 'Must be at least 6 characters.'
         required: true
-        example: 'SPQWcX>~M&4\.*|.P'
+        example: '<uzJ[MxYMuL'
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      email: davis.rae@example.com
-      password: 'SPQWcX>~M&4\.*|.P'
+      email: linnea90@example.com
+      password: '<uzJ[MxYMuL'
     fileParameters: []
     responses: []
     responseFields: []
@@ -139,7 +139,7 @@ endpoints:
           cache-control: 'no-cache, private'
           content-type: application/json
           x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '59'
+          x-ratelimit-remaining: '58'
           access-control-allow-origin: '*'
         description: null
         custom: []
@@ -180,7 +180,7 @@ endpoints:
           cache-control: 'no-cache, private'
           content-type: application/json
           x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '58'
+          x-ratelimit-remaining: '57'
           access-control-allow-origin: '*'
         description: null
         custom: []
@@ -251,7 +251,7 @@ endpoints:
           cache-control: 'no-cache, private'
           content-type: application/json
           x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '57'
+          x-ratelimit-remaining: '56'
           access-control-allow-origin: '*'
         description: null
         custom: []
@@ -286,12 +286,12 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: elva47@example.com
+        example: mcglynn.zola@example.net
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      email: elva47@example.com
+      email: mcglynn.zola@example.net
     fileParameters: []
     responses: []
     responseFields: []
@@ -325,7 +325,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: devante45@example.net
+        example: pagac.stuart@example.net
         type: string
         enumValues: []
         custom: []
@@ -333,13 +333,13 @@ endpoints:
         name: otp_code
         description: ''
         required: true
-        example: 8
+        example: 4
         type: integer
         enumValues: []
         custom: []
     cleanBodyParameters:
-      email: devante45@example.net
-      otp_code: 8
+      email: pagac.stuart@example.net
+      otp_code: 4
     fileParameters: []
     responses: []
     responseFields: []
@@ -373,7 +373,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: cronin.darby@example.net
+        example: zulauf.lorine@example.org
         type: string
         enumValues: []
         custom: []
@@ -381,7 +381,7 @@ endpoints:
         name: new_password
         description: ''
         required: true
-        example: est
+        example: et
         type: string
         enumValues: []
         custom: []
@@ -389,16 +389,211 @@ endpoints:
         name: confirm_password
         description: 'The value and <code>new_password</code> must match.'
         required: true
-        example: explicabo
+        example: officiis
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      email: cronin.darby@example.net
-      new_password: est
-      confirm_password: explicabo
+      email: zulauf.lorine@example.org
+      new_password: et
+      confirm_password: officiis
     fileParameters: []
     responses: []
+    responseFields: []
+    auth: []
+    controller: null
+    method: null
+    route: null
+    custom: []
+  -
+    httpMethods:
+      - GET
+    uri: api/slider
+    metadata:
+      groupName: Endpoints
+      groupDescription: ''
+      subgroup: ''
+      subgroupDescription: ''
+      title: ''
+      description: ''
+      authenticated: false
+      custom: []
+    headers:
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters: []
+    cleanUrlParameters: []
+    queryParameters: []
+    cleanQueryParameters: []
+    bodyParameters: []
+    cleanBodyParameters: []
+    fileParameters: []
+    responses:
+      -
+        status: 401
+        content: '{"message":"Unauthenticated."}'
+        headers:
+          cache-control: 'no-cache, private'
+          content-type: application/json
+          access-control-allow-origin: '*'
+        description: null
+        custom: []
+    responseFields: []
+    auth: []
+    controller: null
+    method: null
+    route: null
+    custom: []
+  -
+    httpMethods:
+      - GET
+    uri: api/features
+    metadata:
+      groupName: Endpoints
+      groupDescription: ''
+      subgroup: ''
+      subgroupDescription: ''
+      title: ''
+      description: ''
+      authenticated: false
+      custom: []
+    headers:
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters: []
+    cleanUrlParameters: []
+    queryParameters: []
+    cleanQueryParameters: []
+    bodyParameters: []
+    cleanBodyParameters: []
+    fileParameters: []
+    responses:
+      -
+        status: 401
+        content: '{"message":"Unauthenticated."}'
+        headers:
+          cache-control: 'no-cache, private'
+          content-type: application/json
+          access-control-allow-origin: '*'
+        description: null
+        custom: []
+    responseFields: []
+    auth: []
+    controller: null
+    method: null
+    route: null
+    custom: []
+  -
+    httpMethods:
+      - GET
+    uri: api/franchises
+    metadata:
+      groupName: Endpoints
+      groupDescription: ''
+      subgroup: ''
+      subgroupDescription: ''
+      title: ''
+      description: ''
+      authenticated: false
+      custom: []
+    headers:
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters: []
+    cleanUrlParameters: []
+    queryParameters: []
+    cleanQueryParameters: []
+    bodyParameters: []
+    cleanBodyParameters: []
+    fileParameters: []
+    responses:
+      -
+        status: 401
+        content: '{"message":"Unauthenticated."}'
+        headers:
+          cache-control: 'no-cache, private'
+          content-type: application/json
+          access-control-allow-origin: '*'
+        description: null
+        custom: []
+    responseFields: []
+    auth: []
+    controller: null
+    method: null
+    route: null
+    custom: []
+  -
+    httpMethods:
+      - GET
+    uri: api/workshops
+    metadata:
+      groupName: Endpoints
+      groupDescription: ''
+      subgroup: ''
+      subgroupDescription: ''
+      title: ''
+      description: ''
+      authenticated: false
+      custom: []
+    headers:
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters: []
+    cleanUrlParameters: []
+    queryParameters: []
+    cleanQueryParameters: []
+    bodyParameters: []
+    cleanBodyParameters: []
+    fileParameters: []
+    responses:
+      -
+        status: 401
+        content: '{"message":"Unauthenticated."}'
+        headers:
+          cache-control: 'no-cache, private'
+          content-type: application/json
+          access-control-allow-origin: '*'
+        description: null
+        custom: []
+    responseFields: []
+    auth: []
+    controller: null
+    method: null
+    route: null
+    custom: []
+  -
+    httpMethods:
+      - GET
+    uri: api/businessevents
+    metadata:
+      groupName: Endpoints
+      groupDescription: ''
+      subgroup: ''
+      subgroupDescription: ''
+      title: ''
+      description: ''
+      authenticated: false
+      custom: []
+    headers:
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters: []
+    cleanUrlParameters: []
+    queryParameters: []
+    cleanQueryParameters: []
+    bodyParameters: []
+    cleanBodyParameters: []
+    fileParameters: []
+    responses:
+      -
+        status: 401
+        content: '{"message":"Unauthenticated."}'
+        headers:
+          cache-control: 'no-cache, private'
+          content-type: application/json
+          access-control-allow-origin: '*'
+        description: null
+        custom: []
     responseFields: []
     auth: []
     controller: null
